--- a/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
+++ b/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
@@ -5,12 +5,14 @@
     <title>BlazorWebsite</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-grid.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/bootstrap-reboot.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
     <app>Loading...</app>
 
-    <script src="css/bootstrap/bootstrap-native.min.js"></script>
+    <script src="css/bootstrap/bootstrap.bundle.min.js"></script>
     <script type="blazor-boot"></script>
 </body>
 </html>
