fix layout after update to blazor 0.3, example of working js interop

--- a/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
+++ b/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
@@ -14,5 +14,17 @@
 
     <script src="css/bootstrap/bootstrap.bundle.min.js"></script>
     <script type="blazor-boot"></script>
+    <script>
+        // Register a very simple JavaScript function that just prints
+        // the input parameter to the browser's console
+        Blazor.registerFunction('say', (data) => {
+            console.dir(data);
+
+            // Your function currently has to return something. For demo
+            // purposes, we just return `true`.
+            return true;
+        });
+    </script>
+
 </body>
 </html>
