--- a/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
+++ b/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
@@ -2,29 +2,34 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BlazorWebsite</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-grid.min.css" rel="stylesheet" />
-    <link href="css/bootstrap/bootstrap-reboot.min.css" />
+    <link href="css/bootstrap/bootstrap-reboot.min.css" />-->
     <link href="css/site.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js"></script>
 </head>
 <body>
     <app>Loading...</app>
 
-    <script src="css/bootstrap/bootstrap.bundle.min.js"></script>
-    <script type="blazor-boot"></script>
-    <script>
-        // Register a very simple JavaScript function that just prints
-        // the input parameter to the browser's console
-        Blazor.registerFunction('say', (data) => {
-            console.dir(data);
+    <!--<script src="css/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/summernote/0.8.9/summernote-lite.js"></script>-->
+    <script type="blazor-boot">
 
-            // Your function currently has to return something. For demo
-            // purposes, we just return `true`.
-            return true;
-        });
     </script>
+    <script src="scripts/blazorRegisterFunctions.js"></script>
 
 </body>
 </html>
