--- a/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
+++ b/BlazorWebsite/BlazorWebsite.Client/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BlazorWebsite</title>
+    <title>Krzysztof Wrona</title>
     <base href="/" />
     <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bootstrap/bootstrap-grid.min.css" rel="stylesheet" />
